# Marketimmune

./: .env.example  .gitignore  AGENT_ORCHESTRATION_PLAN.md  ARCHITECTURE.md  AUDIT_AND_PLAN.md  CLAUDE.md  DASHBOARD_QUICK_START.md  DASHBOARD_SUMMARY.md  GEIST_MIGRATION_PLAN.md  Makefile  MarketImmune_v2_Refactor_Plan.md  PRODUCT.md  README.md  RECRUITER_ROADMAP.md  RESUME_BULLETS.md  dashboard_requirements.txt  manage.py  package.json  pyproject.toml  setup_dashboard.bat  setup_dashboard.sh  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml
aegisbench/datasets/: builder.py  splits.py
aegisbench/tasks/: ood_detection.py
dashboard/: README.md  __init__.py  admin.py  api_validators.py  apps.py  demo_data.py  models.py  models_audit.py  models_demo.py  models_simulator.py  requirements.txt  serializers.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_demofeaturerow_demomarketevent_demotrainingrun_and_more.py  0003_replaysession_simulatedagenttrade_and_more.py  0004_replayevent_real_market_fields.py  0005_agentic_loop_models.py  0006_scoredfilldecision.py  0007_scoredfilldecision_loop_links.py  0008_loop_scoped_agentic_ids.py  0009_scoredfilldecisionlink.py  0010_scoredfillrefreshrun.py  0011_hyperliquidbackfilljob.py
dashboard/services/: __init__.py  agentic_service.py  hyperliquid_backfill_service.py  hyperliquid_service.py  markout_decision_service.py  markout_model_service.py  simulator_service.py
dashboard/views/: __init__.py  _common.py  agentic.py  api_demo.py  api_hyperliquid.py  api_hyperliquid_backfill.py  api_markout_model.py  api_metrics.py  legacy_dashboard.py  simulator.py
dashboard_project/: settings.py  urls.py
docs/: DASHBOARD.md  DASHBOARD_SETUP.md  README.md  dashboard.html
docs/benchmarks/: hyperliquid_markout_SOL_20260527_20260531_holdout_20260601.json
docs/dev/: AGENTS.md  CLAUDE.md  DESIGN.md  HINDSIGHT_BUILD_PLAN.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.js  App.tsx  api.js  api.ts  config.ts  main.js  main.tsx  routes.ts  styles.css  types.js  types.ts
hindsight/: __init__.py  cli.py
hindsight/core/: __init__.py  clock.py  cursor.py  hashing.py  types.py
hindsight/data/: __init__.py  binance_adapter.py  hyperliquid_adapter.py  repositories.py
hindsight/evaluation/: __init__.py  benchmark.py  leakage.py  metrics.py  walk_forward.py
hindsight/execution/: __init__.py  compare.py  config.py  funding.py  simulator.py  slippage.py
hindsight/pit/: __init__.py  features.py  view.py
hindsight/portfolio/: __init__.py  accounting.py
hindsight/ports/: __init__.py  market_data.py
hindsight/reporting/: __init__.py  backtest_report.py  curves.py  json_report.py  leaderboard.py  manifest.py  markdown_report.py
hindsight/strategy/: __init__.py  base.py
marketimmune/: resilience.py  stats.py
marketimmune/adapters/: __init__.py  binance.py  factory.py
marketimmune/agentic/: __init__.py  base.py  investigator.py  judge.py  llm.py  loop.py  market_simulator.py  memory.py  policy.py  redteam.py  sentinel.py  trainer.py
marketimmune/features/: feature_store.py  hyperliquid_features.py
marketimmune/ingest/: hyperliquid_api.py  hyperliquid_archive.py  hyperliquid_asset_ctxs.py  hyperliquid_backfill.py  hyperliquid_fills.py  hyperliquid_gold.py  hyperliquid_lake.py  hyperliquid_replay_seed.py
marketimmune/labels/: __init__.py  leakage.py  markout.py
marketimmune/models/: __init__.py  calibration.py  dataset.py  hyperliquid_gold_scoring.py  hyperliquid_markout_scorer.py  markout_evaluation.py  promotion.py  risk_head.py  walk_forward.py
marketimmune/monitoring/: __init__.py  drift.py
marketimmune/ports/: __init__.py  market_data.py
marketimmune/replay/: replay_runner.py
marketimmune/scenarios/: generator.py
marketimmune/schemas/: events.py
marketimmune/simulator/: __init__.py  config.py  data_loader.py  pricing.py  replay_builder.py  scenarios.py
scripts/: __init__.py  backfill_hyperliquid_day.py  check_line_limit.py  fetch_hyperliquid_api_sample.py  generate_scenarios.py  hyperliquid_markout_args.py  phase79_metrics.py  rebuild_hyperliquid_training_rows.py  run_benchmark.py  seed_hyperliquid_replay_lake.py  sync-django-bundle.mjs  train_hyperliquid_markout.py  train_order_mtpp.py  train_order_s2p2.py  train_risk_head.py  typecheck.py
tests/: test_resilience.py
tests/aegisbench/: test_benchmark.py
tests/agentic/: conftest.py  test_base.py  test_investigator.py  test_investigator_llm.py  test_judge.py  test_llm.py  test_loop.py  test_market_simulator.py  test_memory.py  test_policy.py  test_redteam.py  test_sentinel.py  test_trainer.py
tests/dashboard/: test_api_validators.py  test_hyperliquid_backfill_service.py  test_hyperliquid_service.py  test_markout_decision_service.py  test_markout_model_service.py
tests/features/: test_hyperliquid_features.py
tests/hindsight/: test_adapter_cli.py  test_baselines_m2.py  test_benchmark_m2.py  test_comparison_reporting.py  test_config_manifest.py  test_core.py  test_core_types.py  test_execution.py  test_hyperliquid_adapter.py  test_metrics_m2.py  test_pit.py  test_repositories.py  test_walk_forward_leakage.py
tests/ingest/: test_hyperliquid_api.py  test_hyperliquid_archive.py  test_hyperliquid_asset_ctxs.py  test_hyperliquid_backfill.py  test_hyperliquid_fills.py  test_hyperliquid_gold.py  test_hyperliquid_lake.py  test_hyperliquid_replay_seed.py
tests/labels/: test_leakage.py  test_markout.py
tests/models/: test_calibration.py  test_hyperliquid_gold_scoring.py  test_hyperliquid_markout_scorer.py  test_markout_evaluation.py  test_mtpp.py  test_promotion.py  test_walk_forward.py
tests/monitoring/: test_drift.py
tests/schemas/: test_events.py
tests/scripts/: test_backfill_hyperliquid_day.py  test_rebuild_hyperliquid_training_rows.py  test_train_hyperliquid_markout.py
tests/simulator/: test_data_loader.py  test_feature_contract.py  test_market_data_seam.py  test_pricing.py  test_replay_builder.py  test_risk_head.py  (+1 more)
(+119 files in other folders)
