[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketimmune"
version = "0.1.0"
description = "Open-source AI trading-agent safety benchmark for crypto exchange microstructure."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "Apache-2.0" }
authors = [{ name = "MarketImmune contributors" }]
dependencies = [
  "anthropic>=0.40",
  "duckdb>=1.0",
  "httpx>=0.27",
  "joblib>=1.4",
  "numpy>=1.26",
  "polars>=1.0",
  "pyarrow>=16.0",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.5",
  "torch>=2.3",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.5",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["marketimmune*", "aegisbench*"], exclude = ["dashboard*", "dashboard_project*", "configs*", "reports*", "data*", "docs*", "scripts*", "tests*"], namespaces = false } }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["marketimmune", "aegisbench"]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["marketimmune", "aegisbench"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
